change heading huu-ich 3

--- a/huu-ich/cac-giai-doan.html
+++ b/huu-ich/cac-giai-doan.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các giai đoạn của cuộc đời (Trang web LHBội)</title>
+<title>Các giai đoạn của cuộc đời</title>
 <meta name="description" content="Trách nhiệm tài chính trong các giai đoạn của cuộc đời" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, giai đoạn, cuộc đời">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-giai-doan">
