--- a/huu-ich/cac-loai-bao-hiem-3.html
+++ b/huu-ich/cac-loai-bao-hiem-3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các loại bảo hiểm (3) (Trang web LHBội)</title>
+<title>Các loại bảo hiểm (3)</title>
 <meta name="description" content="Trang 3: Mục đích của bảo hiểm. Các loại bảo hiểm. Mỗi người nên tự trang bị bảo hiểm cho gia đình." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bảo hiểm, bệnh, tai nạn">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem-3">
