--- a/huu-ich/cach-dau-tu.html
+++ b/huu-ich/cach-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Những cách đầu-tư (Trang web LHBội)</title>
+<title>Những cách đầu-tư</title>
 <meta name="description" content="Mỗi người đều cần phải biết đầu tư để gia tăng tài sản. Trước tiên cần phải phân biệt được những cách đầu tư, và đặc biệt là rủi ro và sự lừa đảo trong đầu tư." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, đầu cơ">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cach-dau-tu">
