--- a/huu-ich/cau-chuyen/bai-hoc-pho-thong.html
+++ b/huu-ich/cau-chuyen/bai-hoc-pho-thong.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bài học phổ thông (Trang web LHBội)</title>
+<title>Bài học phổ thông</title>
 <meta name="description" content="Các bài học ở trường phổ thông rất cần trong cuộc sống" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, phổ thông">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/bai-hoc-pho-thong">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bài học phổ thông</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/huu-ich/cau-chuyen/bai-hoc-pho-thong
     </amp-facebook-like>
   </div>
 
-  <h3>Những bài học trong chương trình phổ thông có ích không?</h3>
+  <h1>Bài học phổ thông</h1>
+  <h2>Những bài học trong chương trình phổ thông có ích không?</h2>
   <p>Chúng ta vẫn thường nghe được nhiều người than rằng học xong 12 năm học phổ thông, ra đời chẳng dùng được bao nhiêu kiến thức vào cuộc sống. Có đúng vậy không?</p>
   <p>Tôi cho rằng nhiều người đã quên mất những bài học phổ thông và đến khi cần dùng kiến thức đó thì không có để dùng và luôn nghĩ rằng kiến thức phổ thông <i>không dùng được</i> trong cuộc sống. Đúng ra thì kiến thức <i>không được dùng</i> trong cuộc sống, không được dùng vì không biết cách dùng.</p>
   <p>Nếu thời xưa chương trình học lịch sử được biên soạn đầy đủ, và tướng Ô Mã Nhi của Mông Cổ được học (hoặc chịu học) kỹ môn lịch sử thế giới như học sinh phổ thông Việt Nam thì có thể đã tránh bị bắt sống trên <a href="https://vi.wikipedia.org/wiki/Tr%E1%BA%ADn_B%E1%BA%A1ch_%C4%90%E1%BA%B1ng_(1288)" target='_blank'>sông Bạch Đằng</a> và sau đó bị chết. Nếu học kỹ, hẳn Ô Mã Nhi phải biết rằng sông Bạch Đằng là nơi quân xăm lăng Nam Hán và Tống đã bị tiêu diệt.</p>
