--- a/huu-ich/cau-chuyen/dang-thieng-lieng.html
+++ b/huu-ich/cau-chuyen/dang-thieng-lieng.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Sứ giả của Đấng thiêng liêng (Trang web LHBội)</title>
+<title>Sứ giả của Đấng thiêng liêng</title>
 <meta name="description" content="Chúng ta không thể biết sứ giả của Đấng thiêng liêng trông như thế nào, sẽ nói gì" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/dang-thieng-lieng">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-  <div class="title">Sứ giả của Đấng thiêng liêng</div>
-  <div class="right">Viết lần đầu trong Tháng Mười, 2013.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/huu-ich/cau-chuyen/dang-thieng-lieng
     </amp-facebook-like>
   </div>
 
+  <h1>Sứ giả của Đấng thiêng liêng</h1>
+  <div class="right">Viết lần đầu trong Tháng Mười, 2013.</div>
   <p>Hồi đó, có một người rất sùng đạo, luôn luôn làm theo lời dạy của Đấng thiêng liêng và trong cuộc sống cũng gặp nhiều may mắn.
   <br>Một hôm, có đoàn người ở làng bên kéo nhau qua làng ông ta và bảo "mọi người hãy mau mau gói ghém hành lý đi tránh lụt, làng bên đã lụt rồi". Mọi người trong làng bắt đầu di tản, riêng ông ta thì cứ bình thản bảo "tôi không sợ, Đấng thiêng liêng sẽ hiện ra cứu tôi."
   <br>Hôm sau, nước đã lên đến ngang hông, mọi người trong làng đã đi hết, chỉ còn ông ta vẫn kê bàn ngồi chờ đấng thiêng liêng hiện ra. Tình cờ có một người làng đi làm ăn xa chèo xuồng về, thấy ông vẫn ở lại, mời ông lên xuồng cùng đi. Ông ta vẫn trả lời "tôi chờ Đấng thiêng liêng hiện ra cứu tôi."
