--- a/huu-ich/cau-chuyen/index.html
+++ b/huu-ich/cau-chuyen/index.html
@@ -65,7 +65,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -126,6 +126,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -174,14 +175,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Những bài-học từ những câu-chuyện</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -200,6 +195,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   </div>
 
 <!-- body here -->
+  <h1>Những bài-học từ những câu-chuyện</h1>
 <dl>
   <dt><a href='bai-hoc-pho-thong'>Bài-học-phổ-thông</a></dt>
   <dd>Những bài-học trong chương-trình phổ-thông cần được áp-dụng trong cuộc-sống hàng-ngày.</dd>
