--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Về hưu trước 40 tuổi (Trang web LHBội)</title>
+<title>Về hưu trước 40 tuổi</title>
 <meta name="description" content="Kinh nghiệm tiết kiệm và đầu tư của một cặp vợ chồng để có đủ tiền để về hưu trước 40 tuổi." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, về hưu">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cau-chuyen/nghi-huu-som">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Về hưu trước 40 tuổi</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,8 +230,9 @@ https://lehboi.github.io/huu-ich/cau-chuyen/nghi-huu-som
     </amp-facebook-like>
   </div>
 
+  <h1>Về hưu trước 40 tuổi</h1>
   <p>Bài dưới đây dịch lại từ <a href="http://www.msn.com/en-us/money/news/how-this-couple-retired-in-their-30s-to-travel-the-world/ar-AAacOgr?ocid=iehp" target="_blank">bài báo trên MSN</a>.</p>
-  <h4>Một cặp vợ chồng đủ tiền về hưu và đi du lịch quanh thế giới trước tuổi 40 bằng cách nào?</h4>
+  <b>Một cặp vợ chồng đủ tiền về hưu và đi du lịch quanh thế giới trước tuổi 40 bằng cách nào?</b>
   <div class="flright"><amp-img alt="Jeremy - Winnie" src="/images/JeremyWinnie.jpg" width="728" height="504" layout="responsive"></amp-img></div>
   <p>Jeremy tốt nghiệp đại học xong là bắt đầu làm cho bộ phận thiết kế điện thoại di động của Motorola ngay, làm 80 giờ mỗi tuần trong 4-5 năm. Động cơ của tinh thần làm việc đó là món nợ 40 ngàn đô-la, trong đó 35 ngàn đô-la là tiền vay để học và 5 ngàn đô-la là tiền chi tiêu bằng thẻ tín dụng.
   <br>Với mức lương 40 ngàn đô-la mỗi năm mà anh ta còn mua một xe hơi mới và một căn nhà 3 phòng ngủ, để cho bằng bạn bè; vì nhà mới mua ở xa chỗ làm nên anh không còn đi làm bằng xe đạp được nữa mà phải lái xe hơi hết 40 phút. Khoản nợ mua nhà và xe cộng với nợ cũ làm anh ta phải chú ý đến tình hình tài chính của mình, và anh bắt đầu lập kế hoạch để trả hết nợ và về hưu ở tuổi 65, rồi bắt đầu đầu tư. Anh ta dùng những khoản vay miễn lãi trong 12 tháng để trả phần lớn nợ tiền học và tiền mua xe.
@@ -270,12 +265,12 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Anh chị đạt đến mục tiêu về hưu sớm như thế nào?</h4>
+  <b>Anh chị đạt đến mục tiêu về hưu sớm như thế nào?</b>
   <p><u>Jeremy</u>: Khi tôi làm ở Motorola, mỗi xu của tôi đều dùng để trả nợ. Nếu tháng nào tôi dư 10$, tôi sẽ trả thêm 10$ vào khoản nợ tiền học. Tôi có để dành quỹ hưu trí tự nguyện <a href="/huu-ich/tich-luy-6">401(k)</a> nhưng tôi lại vay từ đó để mua nhà, khi tôi bán nhà để chuyển đến Seattle thì tôi trả món nợ đó.
   <br>Khi tôi đổi chỗ làm, tôi vẫn chưa có nhiều tiền tiết kiệm, nhưng tôi sắp sạch nợ. Ở Microsoft, tôi bắt đầu tiết kiệm nhiều hơn. Tôi đóng vào quỹ 401(k) tối đa và tiết kiệm ngoài quỹ nữa. Sau khi tôi gặp Winnie, chúng tôi quyết định về hưu sớm, chúng tôi bắt đầu đọc nhưng cuốn sách như là "Your Money or Your Life" và tăng dần lên tới mức tiết kiệm 70% thu nhập. Trong hai năm làm việc cuối cùng, chúng tôi hầu như chuyển hết thu nhập vào tài khoản đầu tư vì chúng tôi có cổ tức và lãi để sống.
   <br>Chúng tôi sống gần khu đại học nên có thể đi bộ đến mọi nơi cần thiết, vì vậy chúng tôi không cần xe hơi. Tôi đi làm bằng xe đạp, 8-20 dặm mỗi ngày. Chúng tôi mua thực phẩm từ chợ nông dân và mạng tiêu thụ nông sản. Chi tiêu lớn nhất của người ta thường là tiền nhà, tiền đi lại và thực phẩm, chúng tôi đã cắt giảm mạnh ba thứ đó nên chi tiêu hàng tháng của chúng tôi dưới 2000 đô-la.
   <br>Có lẽ tôi đã làm việc nhiều hơn kế hoạch 3 năm, hoặc là chúng tôi đã tiết kiệm quá nhiều. Mục tiêu luôn luôn là đi du lịch, sau khi nghỉ việc, chúng tôi sẽ để một năm rưỡi đi quanh Mexico và Trung Mỹ, sau đó về Đài Loan để sinh con.</p>
-  <h4>Mức lương của anh chị là bao nhiêu?</h4>
+  <b>Mức lương của anh chị là bao nhiêu?</b>
   <p><u>Jeremy</u>: Khi tôi mới tốt nghiệp, tôi kiếm được chừng 40 ngàn đô-la mỗi năm, trước khi tôi chuyển đi thì đã lên được hơn 50 ngàn. Tôi bắt đầu ở Microsoft với mức 85 ngàn mỗi năm và sau 12 năm thì tôi có mức 140 ngàn.
   <br><u>Winnie</u>: Tôi làm cùng ngành: điện thoại và máy tính, công việc cuối cùng của tôi là quản lý dự án ở Dell. Tôi kiếm được 32 ngàn đô-la ở Đài Loan.
   <br><u>Jeremy</u>: Chúng tôi cưới được 5 năm rồi, Winnie nghỉ làm và dọn đến Seattle sau khi cưới, nên khoảng 3-4 năm trước khi chúng tôi về hưu, lúc lương tôi đạt đến cao nhất thì cô ấy không đi làm.
@@ -306,13 +301,13 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Winnie, khi chị làm với Dell ở Đài Bắc, thói quen tiết kiệm của chị như thế nào?</h4>
+  <b>Winnie, khi chị làm với Dell ở Đài Bắc, thói quen tiết kiệm của chị như thế nào?</b>
   <p><u>Winnie</u>: Mức sống ở đó rất rẻ nếu bạn muốn tiết kiệm, cho nên tôi có thể để dành được hơn nửa thu nhập.</p>
-  <h4>Chỉ để vào sổ tiết kiệm?</h4>
+  <b>Chỉ để vào sổ tiết kiệm?</b>
   <p>Ở Đài Loan có quỹ hưu trí tự nguyện giống 401(k) ở Mỹ, nhưng do chính phủ quản lý, tôi gửi vào đó hết mức cho phép, phần còn lại cho vào sổ tiết kiệm và đầu tư cổ phiếu.</p>
-  <h4>Vậy là chị có đầu tư?</h4>
+  <b>Vậy là chị có đầu tư?</b>
   <p>Vâng</p>
-  <h4>Anh chị có tính ra một số tiền cụ thể cần để dành đủ để về hưu không?</h4>
+  <b>Anh chị có tính ra một số tiền cụ thể cần để dành đủ để về hưu không?</b>
   <p><u>Winnie</u>: Ý tưởng ban đầu khi chúng tôi cưới là sẽ nghỉ ngay và đi du lịch, cho nên tôi nghỉ làm. Nhưng Jeremy nói rằng nên chờ 3 năm. Anh ấy thích dự án đang làm.
   <br><u>Jeremy</u>: Tôi không muốn rời dự án giữa chừng. Kế hoạch đầu tiên xoay quanh việc lặn, du lịch đến những khu du lịch có lặn biển và kiếm tiền bằng cách dạy lặn.
   <br><u>Winnie</u>: Chúng tôi đã cố nghĩ cách kiếm tiền khi đi du lịch.
@@ -344,12 +339,12 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Cách sống của anh chị như thế nào? Và những người khác nghĩ gì về cách sống đó?</h4>
+  <b>Cách sống của anh chị như thế nào? Và những người khác nghĩ gì về cách sống đó?</b>
   <p><u>Winnie</u>: Chúng tôi làm tiệc ở nhà theo kiểu góp (potluck), mỗi người đem một món đến rồi cùng ăn.
   <br><u>Jeremy</u>: Chúng tôi cũng tổ chức ăn chơi. Một người bạn của chúng tôi có sân nhà đẹp, chúng tôi tổ chức tiệc ở đó. Còn có đi dã ngoại nữa, có một chỗ đẹp cách nhà 20-30 phút, bạn có thể đến đó chơi cả ngày, chỉ tốn một ít xăng. Nhiều người bạn của chúng tôi thì tiêu tiền kỳ cục hơn chúng tôi. Khi tôi hỏi họ có muốn đến chơi căn hộ nhỏ gần trường đại học và ăn thức ăn nhà làm thì họ rất thích. Winnie nấu ăn rất ngon. Các bạn tôi xem món ăn do Winnie nấu ngon như nhà hàng lớn.
   <br>Căn hộ chúng tôi chỉ có 90 mét vuông. Có lúc chúng tôi ở trong căn hộ 40 mét vuông, nó quá nhỏ. Chúng tôi chỉ muốn thử xem mức nào thì vừa. 90 mét vuông thì vừa cho hai người, trong khi căn nhà trung bình khoảng 240 mét vuông. Như vậy là quá lớn, tôi sẽ có cảm giác bị lạc trong đó, giống như một cái hang rất lớn.
   <br>Một người bạn của chúng tôi ở căn nhà 600 mét vuông bên bờ hồ. Căn nhà của người bạn có sân để làm tiệc thì 180 mét vuông. Bạn chúng tôi thường ở những căn nhà 180-200 mét vuông. Chúng tôi chỉ phải trả 980 đô-la thuê nhà. Thuê một căn hộ nhỏ hơn ở khu đông đúc là 1800 đô-la, thuê nguyên căn nhà sẽ tốn khoảng 2000-3000 đô-la.</p>
-  <h4>Chiến lược đầu tư của anh chị là gì?</h4>
+  <b>Chiến lược đầu tư của anh chị là gì?</b>
   <p><u>Jeremy</u>: Chúng tôi thay đổi hoài, phần lớn là các quỹ đầu tư theo chỉ số. Phần lớn tiền chúng tôi cho vào quỹ Vanguard Total Stock Market Index Fund và Vanguard Total International Stock Index Fund. Tôi đọc những tài liệu online về về hưu sớm, những lời khuyên của Jack Bogle và Warren Buffett về đầu tư chỉ số thụ động. Phân chia tài sản theo cách hiện đại: một phần nhỏ vào trái phiếu, một phần nhỏ vào các công ty đầu tư bất động sản, phần còn lại chia vào hai quỹ trên. Vì chúng tôi muốn có cuộc sống hưu hơn 60 năm, chúng tôi đầu tư phần lớn vào cổ phiếu để có lợi nhuận cao trong dài hạn.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -377,11 +372,11 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Khi khủng hoảng tài chính, kế hoạch của anh chị bị ảnh hưởng thế nào?</h4>
+  <b>Khi khủng hoảng tài chính, kế hoạch của anh chị bị ảnh hưởng thế nào?</b>
   <p><u>Jeremy</u>: Trên giấy tờ thì chúng tôi lỗ mất 400 ngàn đô-la, nhưng tôi buồn là lúc đó không có nhiều tiền để mua thêm. Lúc đó tôi thấy cổ phiếu như là bán đổ bán tháo, và tôi muốn mua thêm. Lúc đó tôi vét hết tiền để mua, tôi còn nghĩ có nên vay tiền để mua không. Hai năm sau, chúng tôi giàu hơn nhiều so với lúc đầu. Bạn đừng sợ hãi bán hết cổ phiếu ở đáy để rút ra khỏi thị trường thì thị trường không ảnh hưởng đến bạn nhiều. Thậm chí, chúng ta còn mạnh hơn nữa. Có thể khủng hoảng có ảnh hưởng đến quyết định làm việc lâu hơn vài năm, một phần là dự án lúc đó cũng hay, một phần là tôi muốn vượt qua lúc thị trường xấu và tiết kiệm nhiều hơn.</p>
-  <h4>Khi nào anh chị biết là đã đủ để nghỉ hẳn? Lúc đó anh chị có bao nhiêu?</h4>
+  <b>Khi nào anh chị biết là đã đủ để nghỉ hẳn? Lúc đó anh chị có bao nhiêu?</b>
   <p><u>Jeremy</u>: Chúng tôi thấy đủ sau khi khủng hoảng 3 năm. Chúng tôi có thể sống suốt đời với một triệu đô-la. Chúng tôi tiêu 40 ngàn đô-la mỗi năm, trừ lúc chuẩn bị có con năm ngoái.</p>
-  <h4>Anh chị có cần chuyển đến những nước ít tốn kém hơn để đủ sống?</h4>
+  <b>Anh chị có cần chuyển đến những nước ít tốn kém hơn để đủ sống?</b>
   <p><u>Winnie</u>: Ở Seattle chúng tôi cũng chỉ tiêu 40 ngàn mỗi năm.
   <br><u>Jeremy</u>: Chúng tôi tiêu ít hơn 3 ngàn mỗi tháng khi ở Mexico. Chúng tôi ở trong căn nhà 3 phòng ngủ ở trung tâm San Miguel de Allende. Chúng tôi suýt mua một căn nhà ở đó. Chúng tôi ăn tiệm hai-ba lần mỗi ngày, đi uống với bạn bè, thuê người làm vườn và dọn nhà, tất cả chỉ hết 2500 đô-la. Nếu sống như vậy ở Mỹ thì sẽ tốn hơn nhiều, nên chúng tôi phải thay đổi, không ra ngoài uống nữa. Không nên trả 15$ để uống một ly rượu, bạn có thể uống trong sân nhà. Nếu sống như vậy ở Manhattan thì còn tốn hơn nữa.</p>
 <!-- AMP In-article 1 -->
@@ -410,10 +405,10 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Bây giờ anh chị có một thu nhập nào không?</h4>
+  <b>Bây giờ anh chị có một thu nhập nào không?</b>
   <p>Năm ngoái, thu được từ trang blog 2000 đô-la. Đó là tiền quảng cáo, đủ để trả tiền thuê server. Ngoài ra, tất cả thu nhập của chúng tôi chỉ từ cổ tức và lãi. Chúng tôi sống hoàn toàn từ các khoản đó. Tôi quản lý thuế rất kỹ cho các tài sản đó, nhờ vậy năm 2013 và 2014, không phải trả đồng thuế nào mà mỗi năm còn chuyển 20 ngàn đô-la sang tài khoản hưu Roth IRA để được miễn thuế. Tôi đã đưa các báo cáo thuế lên blog để mọi người thấy thực tế như thế nào. Kế hoạch của chúng tôi là trong 30 năm tới sẽ chuyển hết tiền từ tài khoản hưu 401(k) sang tài khoản hưu Roth IRA để không chịu thuế, tóm lại là chúng tôi sẽ có 3 triệu đô-la trong 30 năm tới mà không phải đóng thuế.
   <br>Chúng tôi ghi chép chi tiêu rất cẩn thận, chỉ nhằm để đưa vào blog với mục đích thông tin giáo dục. Chúng tôi không quá dè xẻn. Nếu cần gì thì mua, muốn tiêu cho việc gì thì tiêu.</p>
-  <h4>Từ khi về hưu, anh chị đã làm gì?</h4>
+  <b>Từ khi về hưu, anh chị đã làm gì?</b>
   <p><u>Jeremy</u>: Chúng tôi đi Mexico với ý nghĩ rằng có thể học tiếng Tây-ban-nha và du lịch quanh Trung Mỹ, Nam Mỹ. Chúng tôi nghĩ rằng chỉ ở Mexico hai tháng, nhưng lại ở đến chín tháng.
   <br><u>Winnie</u>: Chúng tôi kết bạn với dân địa phương.
   <br><u>Jeremy</u>: Chúng tôi tập nói. Khi ở San Miguel de Allende, thành phố di sản Unesco, chúng tôi dự lớp học tiếng Tây-ban-nha một tháng. Winnie học làm nữ trang, học vẽ. Thành phố San Miguel de Allende là mỏ bạc, nên có nhiều thợ làm trang sức thủ công, Winnie làm việc với một người như vậy. Tôi đi dã ngoại, đi tất cả 900 kilo mét quanh đảo.
@@ -451,7 +446,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Bài học từ câu chuyện:</h4>
+  <h2>Bài học từ câu chuyện:</h2>
   <ol>
     <li>Hai vợ chồng có một mục đích rõ ràng và mọi quyết định đều hướng tới mục đích đó. Mục đích là về hưu sớm để đi du lịch nên quyết định không mua nhà, không ở nhà lớn hơn nhu cầu, chọn nơi ở thuận tiện để không cần xe hơi, đỡ tốn tiền xăng và để xe.<br />
 Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết định để dành bao nhiêu phần thu nhập cho việc đó.</li>
