--- a/huu-ich/cau-chuyen/nhung-hon-da.html
+++ b/huu-ich/cau-chuyen/nhung-hon-da.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Những hòn đá (Trang web LHBội)</title>
+<title>Những hòn đá</title>
 <meta name="description" content="Áp dụng bài học về Những hòn đá trong tài chính gia đình, thu xếp những khoản tiền lớn cần có trong tương lai" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, những hòn đá, cuộc đời, thu nhập, chi tiêu">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/nhung-hon-da">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -141,6 +141,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -212,16 +213,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Những hòn đá</div>
-  <div class="right">Tháng Năm, 2013</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -239,6 +232,8 @@ https://lehboi.github.io/huu-ich/cau-chuyen/nhung-hon-da
     </amp-facebook-like>
   </div>
 
+  <h1>Những hòn đá</h1>
+  <div class="right">Tháng Năm, 2013</div>
   <p>Tôi chép lại một câu chuyện đọc được đã lâu:</p>
   <blockquote>
   <div class="tblue">Một hôm, một chuyên gia về quản lý doanh nghiệp thuyết trình về quản lý thời gian. Ông đương nhiên biết rõ hơn ai hết thời giờ đối với doanh nhân quý hiếm như thế nào. Nhưng ông không tỏ ra khẩn trương gì cả. Rất thong thả ông đặt một cái thùng miệng rộng dung tích 20 lít trước mặt mọi người và bày ra bên cạnh một đống đá, mỗi hòn to cỡ nắm tay. Ông cẩn thận xếp từng hòn đá vào thùng, cho đến khi những hòn đá cuối cùng đầy tới mép. Xong, ông hỏi: “Thùng đã đầy chưa?” Cử tọa đồng thanh trả lời: “Đầy rồi.”
@@ -248,7 +243,7 @@ Bây giờ ông trang trọng hỏi cử tọa có ai biết ý nghĩa của min
   </blockquote>
   <amp-accordion>
   <section>
-  <h4>YouTube Video</h4>
+  <h2>YouTube Video</h2>
   <amp-youtube
     data-videoid="AI4PydPOrV8"
     layout="responsive"
