--- a/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
+++ b/huu-ich/cau-chuyen/sinh-lao-benh-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Sinh Lão Bệnh Tử (Trang web LHBội)</title>
+<title>Sinh Lão Bệnh Tử</title>
 <meta name="description" content="Sinh Lão Bệnh Tử. Trong ba chữ Lão Bệnh Tử thì chữ nào ít đáng sợ nhất?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, Sinh Lão Bệnh Tử">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/sinh-lao-benh-tu">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Sinh Lão Bệnh Tử</div>
-  <div class="right">Viết lần đầu trong Tháng Mười Một, 2014</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/huu-ich/cau-chuyen/sinh-lao-benh-tu
     </amp-facebook-like>
   </div>
 
+  <h1>Sinh Lão Bệnh Tử</h1>
+  <div class="right">Viết lần đầu trong Tháng Mười Một, 2014</div>
   <p>Ai cũng biết khái niệm <i><strong>Sinh - Lão - Bệnh - Tử</strong></i> nhưng mỗi người suy nghĩ khác nhau về bốn chữ đó.
   <br>Chữ <strong>Tử</strong> được để ý nhiều hơn vì Tử rất đáng sợ trong mắt nhiều người. Thời xưa có những người lớn tuổi lo xa chuẩn bị cho hậu sự của mình, đó là chuẩn bị cho chữ Tử.
   <br>Thật ra thì chữ <strong>Bệnh</strong> mới đáng sợ hơn chữ Tử. Người nào về già không bệnh mà chết, ra đi nhẹ nhàng thì đều được cho là có phúc. Nhưng ở đời có được mấy người có phúc như vậy? Tôi sống trên đời hơn 50 năm rồi chưa được biết một người già chết mà không bệnh! Như vậy có phải Tử chưa đáng sợ bằng Bệnh không?
