--- a/huu-ich/cau-chuyen/tranh-mang-no.html
+++ b/huu-ich/cau-chuyen/tranh-mang-no.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tránh mang nợ (Trang web LHBội)</title>
+<title>Tránh mang nợ</title>
 <meta name="description" content="Tránh mang nợ để đầu óc thanh thản, cuộc sống ổn định. Phải cẩn thận khi dùng thẻ tín dụng." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, nợ">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cau-chuyen/tranh-mang-no">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Tránh mang nợ</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/cau-chuyen/tranh-mang-no
     </amp-facebook-like>
   </div>
 
+  <h1>Tránh mang nợ</h1>
   <p>Thẻ tín dụng chưa đến mức phổ biến ở Việt Nam, nhưng cũng đã có người giắt vài thẻ tín dụng trong bóp. Các ngân hàng đang ráo riết mời dân chúng dùng thẻ tín dụng với lý do "dùng trước, trả tiền sau" là có lợi "vì được vay tiền không trả lãi đến 45 ngày".
   <br>Tính kỹ ra thì không có lợi chút nào. Dùng trước nhưng phải có đủ tiền để trả khi đến kỳ thanh toán, nếu không sẽ bủn rủn vì lãi suất. Như vậy để an toàn thì luôn luôn phải có tiền mới quẹt thẻ, tiền chỉ nằm lại trong tài khoản thêm ít ngày, sinh lãi có bao nhiêu đâu. Giả sử bạn thường chi mỗi tháng 10 triệu đồng qua thẻ tín dụng, như trên đã nói bạn cũng sẽ có 10 triệu đồng trong tài khoản từ kỳ lãnh lương đến ngày thanh toán số nợ thẻ. 10 triệu đồng nằm trong tài khoản không quá 30 ngày, với lãi suất không kỳ hạn thì tiền lãi có được chừng hơn 10 ngàn đồng. Trong khi đó hàng năm bạn phải trả phí thường niên cho thẻ từ 200 ngàn đến 500 ngàn đồng. Các ngân hàng thường có các đợt khuyến mãi miễn phí thường niên năm đầu, năm sau sẽ thu. Nếu bạn lên lịch chính xác thì bạn có thể dùng thẻ tín dụng miễn phí thường niên trong năm đầu và đến tuần cuối cùng đem thẻ đến trả cho ngân hàng để khỏi bị tính phí thường niên của năm thứ hai. Như vậy thẻ sẽ giúp bạn lợi được chừng 100 ngàn đồng một năm, và phải nhớ thanh toán đúng hạn 12 lần (trễ một ngày cũng bị tính lãi và phạt thanh toán trễ), có đáng để dùng không? Đối với tôi thì không.
   <br>Nếu bạn chi qua thẻ mỗi tháng nhiều hơn thì khoản tiền lời do trả chậm cũng nhiều hơn, nhưng chi nhiều hơn thì cần phải dùng hạng thẻ vàng, thẻ bạch kim và phí thường niên cũng cao hơn! Cuối cùng vẫn không lợi chút nào.
@@ -272,11 +267,11 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-  <h4>Tại sao nên trả hết tiền khi mua hàng</h4>
+  <h2>Tại sao nên trả hết tiền khi mua hàng</h2>
   <p>Lúc này ngân sách hàng tháng của gia đình tôi quá êm ả. Bên cạnh những chi tiêu thường xuyên, tôi có món nợ phải trả, thực phẩm phải mua, hoá đơn điện-nước phải trả. Đóng một ít tiền vào kế hoạch tiết kiệm giáo dục cho các con, một ít vào quỹ hưu trí tự nguyện cho tôi, thế là xong ngân sách của tháng. Sau khi thanh toán hết các hoá đơn, điều quan trọng đối với chúng tôi là chuyển ngay khoản còn dư vào các tài khoản tiết kiệm để nó không bị tiêu đi ngoài ý muốn.
   <br>Trước kia thì không được êm ả như vậy, hôm nọ tôi đã ôn lại thời điểm khó khăn đó khi tôi lật lại sổ tay cũ của mình. Lối sống trước đó đã làm cho gia đình tôi bầm dập, đến Tháng Tám năm 2010, gia đình tôi mới bắt đầu kiểm soát ngân sách. Bạn có biết trước đây tôi phải trả bao nhiêu hoá đơn một tháng không? Hai mươi bốn hoá đơn.
   <br>Trả góp xe hơi, thanh toán chi tiêu qua thẻ tín dụng, trả nợ vay…, ôi trời ơi. Bởi vậy không có gì lạ khi chúng tôi không thể để dành được một chút nào. Thật may mắn là thời kỳ đó đã qua sau khi đã nhận ra được nguyên nhân của tình trạng không may đó. Vấn đề là: Chúng tôi đã mua trả góp mọi thứ, không có thứ gì được trả hết tiền khi mua.</p>
-  <h4>Những món nợ lặt vặt suốt đời</h4>
+  <h2>Những món nợ lặt vặt suốt đời</h2>
   <p>Sự thật là: Bạn có thể có hầu như tất cả những gì bạn muốn.
   <br>Tôi cũng vậy. Tất cả chúng ta đều vậy. Mọi thứ: xe hơi, quần áo mới, kim cương, những chuyến du lịch; hầu như tất cả những thứ mà bạn để mắt đến đều có thể trở thành của bạn.
 Phải, một cách nào đó thì như vậy…
@@ -308,11 +303,11 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Hãy ngừng vòng luẩn quẩn</h4>
+  <h2>Hãy ngừng vòng luẩn quẩn</h2>
   <p>Tất cả chúng ta đều biết đổi xe hơi dễ đến mức nào. Bạn chỉ cần đến một đại lý xe, họ xem xe của bạn, bạn chọn một chiếc đẹp hơn, thế là xong. Bạn sẽ tiếp tục trả góp cho chiếc xe mới với mức bằng như trả góp cho chiếc xe cũ, thậm chí còn ít hơn nữa. Nhưng có phải bạn đã được lợi khi đổi xe mà không có tiền mặt? Có lẽ không.
   <br>Tôi cũng đã làm như vậy. Gia đình tôi đã đổi xe không biết bao nhiêu lần mà kể, hầu như chỉ vì ý thích. Bây giờ nghĩ lại, tôi cho rằng chỉ vì chán chiếc xe cũ nên đổi nó. Và thật đáng buồn là chúng tôi đã không nhận ra cái giá thật sự của việc cứ đổi xe liền liền. Chúng tôi chỉ quan tâm đến khoản phải trả góp hàng tháng, không có mục tiêu trả dứt ngay.
   <br>Thật may mắn là chúng tôi đã quyết định thay đổi cách sống lúc bắt đầu thực hiện kiểm soát ngân sách. Và ngay khi chúng tôi ngừng sự chi tiêu điên rồ đó, chúng tôi đã tạo ra một cơ hội lớn để mãi mãi chấm dứt vòng luẩn quẩn. Chúng tôi bắt đầu trả hết tiền khi mua tất cả mọi thứ, không chồng thêm vào cột nợ những khoản trả góp mà chúng tôi không thể gánh nổi.</p>
-  <h4>Biến thời điểm khó khăn thành học hỏi kinh nghiệm</h4>
+  <h2>Biến thời điểm khó khăn thành học hỏi kinh nghiệm</h2>
   <p>Đồng thời, chúng tôi nghiêm túc cố thoát ra khỏi nợ nần. Thật may mắn là không mất nhiều thời gian để trả gần hết các món nợ, trừ hai món lớn nhất là khoản vay mua xe hơi của tôi và khoản vay học đại học của chồng tôi. Tôi vẫn nhớ cái ngày mà chúng tôi trả xong luôn hai món nợ đó. Tổng cộng hơn 10 ngàn đô-la và tôi thật sự thấy đau khi bấm nút ra lệnh chuyển tiền. Tôi cảm thấy đau vì đó là tiền của tôi, tôi làm ra bằng máu, mồ hôi và nước mắt. Tiền đó là sức sống của tôi, vậy mà nó bị hút đi bởi chiếc xe hơi ngu xuẩn mà tôi đã mua khi mới nhìn sơ qua.
   <br>Tôi vẫn đang dùng chiếc xe hơi đó. Tại sao à? Bởi vì nó đã được trả xong, cũng như tất cả những thứ khác tôi đang sở hữu. Và bây giờ tôi sẽ lái chiếc xe đó tới khi nào nó rớt bánh hay là động cơ chết hẳn mới thôi, có lẽ khoảng 500 ngàn dặm.
   <br>Tôi đã học được vài thứ qua cuộc phiêu lưu trong nợ của chúng tôi và từ món tiền trả nợ 10 ngàn đô-la cuối, và tôi không bao giờ đi lại con đường đó nữa. Chia tay một số tiền lớn như vậy thật sự là rất đau. Nó nóng rát. Nó làm tôi cảm thấy khó ở. Sau nhiều năm rồi mà tôi vẫn nhớ cảm giác như vậy.</p>
@@ -342,7 +337,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Trả hết tiền mua hàng để cảm thấy nóng rát</h4>
+  <h2>Trả hết tiền mua hàng để cảm thấy nóng rát</h2>
   <p>Từ lúc đó, chúng tôi trả hết tiền khi mua mọi thứ, kể cả chiếc xe cho chồng tôi, đồ nội thất, sửa nhà… Mặc dù rất khó làm, việc ngừng mua trả góp mọi thứ đã thay đổi tương lai tài chính của chúng tôi. Đây là những lý do:</p>
   <ul>
     <li><u>Trả hết tiền buộc chúng ta phải cân nhắc giá tiền</u>. Dù cho bạn mua món gì, bạn đều cảm thấy khác nếu trả hết tiền. Vì bạn phải nhìn vào tổng số tiền chứ không phải là con số phải trả góp hàng tháng hay hàng năm.</li>
