--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Quỹ đầu tư (Trang web LHBội)</title>
+<title>Quỹ đầu tư</title>
 <meta name="description" content="Giải thích về quỹ đầu tư, trái phiếu, cổ phiếu, quỹ mở, quỹ đóng, rủi ro khi đầu tư vào quỹ" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, quỹ đầu tư">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/quy-dau-tu">
