--- a/huu-ich/ke-hoach-tai-chinh/bao-ve.html
+++ b/huu-ich/ke-hoach-tai-chinh/bao-ve.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bảo vệ thu nhập (Trang web LHBội)</title>
+<title>Bảo vệ nguồn thu nhập</title>
 <meta name="description" content="Cách bảo vệ số tiền đang có và sẽ có của gia đình, bảo hiểm bao nhiêu là vừa đủ để ổn định tương lai" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, thu nhập, bảo vệ, bảo hiểm">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/bao-ve">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bảo vệ nguồn thu nhập</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Bảo vệ nguồn thu nhập</h1>
   <p>Có một nguyên tắc là <i>lợi nhuận luôn song hành với rủi ro</i>. Khi bạn đưa tiền vào góp vốn kinh doanh thì lợi nhuận có thể cao hơn gửi tiết kiệm ở ngân hàng nhưng bạn phải chấp nhận là có nguy cơ thua lỗ. Khi bạn gửi tiết kiệm ở ngân hàng thì nguy cơ thua lỗ gần như không có, nhưng vẫn còn một nguy cơ là bạn <i>không thể</i> gửi tiền vào ngân hàng đều đặn và liên tục như kế hoạch, nghĩa là bạn không thể đạt tới mục tiêu dù không bị lỗ.</p>
   <p>Nếu cuộc đời yên bình đến khi về già thì lập và làm theo <a href="../ke-hoach-tai-chinh/">kế hoạch này</a> sẽ bảo đảm an nhàn lúc tuổi già. Nhưng không phải mọi người đều được yên bình suốt đời, mọi người cần phải đề phòng tên cướp Thời Gian. Tên cướp Thời Gian có thể phá hỏng kế hoạch của bạn bằng cách đem đến bệnh tật, tai nạn vào những lúc không ai ngờ tới.</p>
   <p>Không ai ngờ mình có thể gặp tai nạn khi đi ăn sinh nhật, đám cưới, đi nghỉ mát hay khi đi làm từ thiện! Ngồi yên trong nhà, không đi ra đường cũng không tránh khỏi chạm trán tên cướp này. Mỗi năm có khoảng 1 triệu người Việt Nam gặp tai nạn đủ loại: tai nạn giao thông, tai nạn lao động, tai nạn trong sinh hoạt…</p>
@@ -274,7 +269,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Bảo hiểm giúp bạn thực hiện <a href="ke-hoach">ước mơ</a> như thế nào?</h3>
+  <h2>Bảo hiểm giúp bạn thực hiện <a href="ke-hoach">ước mơ</a> như thế nào?</h2>
   Giả sử hai vợ chồng tôi vừa mới vay người thân để mua nhà, cả hai đang phải <a href="no-t-co-dinh">trả nợ</a> 700 triệu đồng trong 6 năm. Nếu chẳng may một trong hai người gặp tai nạn qua đời thì người còn lại có thể trả nợ đúng kế hoạch không? Nếu người mà tôi vay cần tiền để dùng vào việc quan trọng như là cho con đi du học thì tôi có thể nào xin khất được, tôi phải đi vay với lãi suất cao hơn để trả nợ người thân. Trả nợ người thân với lãi thấp đã khó, làm sao trả nợ với lãi cao đây, căn nhà mơ ước  lâu nay đã bị đe doạ rồi. Trong trường hợp này <a href="../cac-loai-bao-hiem/">bảo hiểm</a> có thể giúp được. Nếu trước khi vay nợ, mỗi người có một khoản bảo hiểm tai nạn 500 triệu đồng, với mức phí 1 triệu đồng mỗi năm thì đỡ lo biết mấy.
   <br>Trong ví dụ Con-đầu trong <a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">KHTC</a>, giả sử tôi cần để dành tiền cho con học đại học, sau 14 năm sẽ cần số tiền hơn 500 triệu đồng để học đại học trong nước. Theo tính toán thì tôi cần để dành mỗi tháng 1,174 triệu đồng, đồng thời tôi mua một hợp đồng bảo hiểm giáo dục để đến lúc đó con tôi nhận được 120 triệu đồng. Giả sử tôi không sống đủ 14 năm thì làm sao dành ra 1,174 triệu đồng mỗi tháng đến ngày đó? Tôi mua thêm quyền lợi bảo hiểm tử vong 250 triệu đồng và bảo hiểm tai nạn 200 triệu đồng (với mức phí 4 ngàn đồng / ngày) để thay cho tiền lương tôi đem về hàng tháng.
   <p>Phần dưới đây là những gợi ý về các quỹ dự phòng cần có khi lập <a href="../ke-hoach-tai-chinh/">kế hoạch tài chính</a>, xem trang Thu-chi của <a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">KHTC</a>.</p>
