--- a/huu-ich/ke-hoach-tai-chinh/huu-tri.html
+++ b/huu-ich/ke-hoach-tai-chinh/huu-tri.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Hưu trí (Trang web LHBội)</title>
+<title>Hưu trí</title>
 <meta name="description" content="Tính số tiền cần có để được về hưu của gia đình. Có thể về hưu sớm khi đã có đủ số tiền. Nếu không có đũ tiền thì khi về già vẫn phải đi kiếm tiền." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, kế hoạch, hưu trí">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/huu-tri">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,15 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Tính Quỹ Hưu trí</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +231,7 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Tính Quỹ Hưu trí</h1>
 <p><a href="thu-chi">Bước 1 ở trên</a> đã tính được chi
 tiêu hàng năm hiện nay trong ô H31 trang Thu-chi, bây giờ mở trang Hưu-trí của <a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">bảng tính</a>. Mục đích của phép tính này là tính số tiền cần có khi về hưu để bạn có một mức sống tương đương với mức sống hiện nay, vì lý do trượt giá nên số tiền dùng hàng tháng khi về hưu sẽ lớn hơn số tiền bạn dùng hiện nay.<br />
 Khi về hưu, sẽ có những khoản chi ít hơn hiện nay (ví dụ như bớt khoản chăm sóc con) và có thể phát sinh những khoản chi mới (ví dụ như chi tiêu chữa bệnh), hãy chọn một hệ số, ghi vào ô B2 làm tỉ lệ giữa chi tiêu lúc về hưu và chi tiêu hiện nay. Tỉ lệ B2 này phụ thuộc vào việc bạn đang ở trong <a href="../cac-giai-doan">giai đoạn nào của cuộc đời</a>. Ô B3 là chi tiêu hàng năm hiện nay nhân với hệ số đã chọn, chia cho 12, đây là mức chi tiêu hàng tháng dự kiến khi về hưu nhưng tính theo mức giá hiện nay.</p>
@@ -289,7 +284,7 @@ data-ad-slot="3830899615">
 <p>Phần dưới của trang tính dùng để dự tính mức lương hưu nhận từ Bảo hiểm Xã hội. Hãy bấm vào dòng màu xanh ngay sau đây để xem chi tiết.</p>
 <amp-accordion>
 <section>
-<h4>Dự tính mức lương hưu nhận từ Bảo hiểm Xã hội (bấm vào đây để xem chi tiết)</h4>
+<h2>Dự tính mức lương hưu nhận từ Bảo hiểm Xã hội (bấm vào đây để xem chi tiết)</h2>
 <p>
 Hai ô B27 và B28 để ghi số tháng <b>đã</b> đóng BHXH và tổng số lương đã đóng BHXH. Bạn phải mở sổ BHXH của bạn để cộng ra hai con số này. Ở thành phố Hồ Chí Minh, bạn có thể tìm thông tin ở <a href="http://c13.bhxhtphcm.gov.vn/" target="_blank">trang web của BHXH</a>.<br />
 Ô B30 ghi mức lương đóng BHXH của bạn hiện nay, hãy hỏi phòng nhân sự nơi bạn nhận lương để biết con số này, nó có thể thấp hơn nhiều so với lương bạn đang nhận hàng tháng.<br />
