--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Lập kế hoạch tài chính (Trang web LHBội)</title>
+<title>Lập kế hoạch tài chính</title>
 <meta name="description" content="Hướng dẫn lập kế hoạch tài chính gia đình. Công cụ giải quyết nhiều bài toán khó trong tài chính gia đình." />
 <meta name="keywords" content="hữu ích, kế hoạch, tài chính, gia đình, tích luỹ, hưu trí, tuổi già">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/">
@@ -67,7 +67,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,17 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Lập kế hoạch tài chính gia đình</div>
-  <div class="right">(<a href="https://en.lhboi.name.vn/fa/pfr/">English</a>)</div>
-  <div class="right">Bản 2.1, Tháng Ba, 2020.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -239,6 +231,9 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Lập kế hoạch tài chính gia đình</h1>
+  <div class="right">(<a href="https://en.lhboi.name.vn/fa/pfr/">English</a>)</div>
+  <div class="right">Bản 2.1, Tháng Ba, 2020.</div>
   <h2>Tại sao cần lập kế hoạch tài chính?</h2>
   <div class="flright"><amp-img alt="Lộ trình tài chính" src="/images/KHTCp1.png" width="600" height="371" layout="responsive"></amp-img></a></div>
   <p>Trong cuộc đời mỗi người, mỗi gia đình đều có những lúc dùng đến một món tiền lớn. Những món tiền cần có đó lớn đến mức bất ngờ nhưng ít người để ý đến nó, như là tiền cho con học đại học tốt để bước vững chắc vào đời, tiền để sống khi về già… Nếu không có kế hoạch chuẩn bị những món tiền đó, gia đình sẽ lâm vào cảnh thiếu hụt, cuộc sống không ổn định.</p>
