--- a/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
+++ b/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Cân đối các kế hoạch (Trang web LHBội)</title>
+<title>Cân đối các kế hoạch</title>
 <meta name="description" content="Cân đối các kế hoạch của gia đình sao cho cuộc sống ổn định trong hiện tại lẫn tương lai" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, kế hoạch">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/ke-hoach">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Kế hoạch trọn đời</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Cân đối các kế hoạch</h1>
 <h2>Cân đối thu chi</h2>
 <p>Đây là phần quan trọng nhất trong việc lập kế hoạch tài chính gia đình. Bạn sẽ dùng phần dưới trang tính <a href="thu-chi">Thu-chi</a> để tính sao cho có đủ tiền chi tiêu trong lúc này và cả trong tương lai. Các khoản chi trong tương lai gồm có hưu trí, cho con học <a href="../vao-dai-hoc">đại học</a>, <a href="../cau-chuyen/mua-nha-hay-dau-tu">mua nhà</a>, mở doanh nghiệp…</p>
 <p>Chọn nơi học cho con và dùng trang tính Con-đầu hay Con-út để tính số tiền cần để dành mỗi tháng đến khi con đi học đại học (hai trang này chứa các công thức giống như trang <a href="tk-t-co-dinh">TK-T-cố-định</a>). Ô số tiền hiện có B4 chỉ gồm các khoản tiền tiết kiệm sinh lãi đều đặn. Những tài sản (nhà đất, vàng…) và số tiền bảo hiểm giáo dục mà bạn đang tham gia cho con không ghi ở đây vì sẽ được đưa vào tính trong ô B9. Số tiền bảo hiểm đó chưa có trong tay bạn hôm nay nhưng con bạn chắc chắn có số tiền đó khi bắt đầu học đại học dù cho bạn có bị rủi ro. Để chắc chắn có được số tiền đó, bạn đã chi một khoản vào ô F30/G30 trang Thu-chi.</p>
@@ -313,8 +308,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<p>
-Bạn cần phải thực hiện những kế hoạch trung hạn (mua nhà, cho con học đại học) và dài hạn (hưu trí) ngay từ khi bắt đầu có thu nhập (xem thêm bài <a href="/huu-ich/cau-chuyen/nhung-hon-da">Những hòn đá</a>). Nếu bạn để trễ hơn bạn sẽ khó hoàn thành các kế hoạch của cuộc đời. Người ta thường nghĩ rằng bắt đầu tiết kiệm sau khi lập gia đình là vừa, nhưng sau khi lập gia đình sẽ có con, sẽ phải nuôi con trong hơn 20 năm với vô số chi phí làm sao tiết kiệm. Khi đã xong trách nhiệm nuôi con thành tài thì đã trên 50 tuổi rồi, còn quá ít thời gian để tích luỹ cho tuổi hưu trí.</p>
+<p>Bạn cần phải thực hiện những kế hoạch trung hạn (mua nhà, cho con học đại học) và dài hạn (hưu trí) ngay từ khi bắt đầu có thu nhập (xem thêm bài <a href="/huu-ich/cau-chuyen/nhung-hon-da">Những hòn đá</a>). Nếu bạn để trễ hơn bạn sẽ khó hoàn thành các kế hoạch của cuộc đời. Người ta thường nghĩ rằng bắt đầu tiết kiệm sau khi lập gia đình là vừa, nhưng sau khi lập gia đình sẽ có con, sẽ phải nuôi con trong hơn 20 năm với vô số chi phí làm sao tiết kiệm. Khi đã xong trách nhiệm nuôi con thành tài thì đã trên 50 tuổi rồi, còn quá ít thời gian để tích luỹ cho tuổi hưu trí.</p>
 <p>Trước đây, tôi chỉ tích luỹ theo cách đơn giản là cất tiền vào một chỗ mà không phân biệt mục đích sử dụng trong tương lai, khi đến lúc cần dùng thì cứ lấy từ một chỗ ra mà dùng. Làm theo cách đó có nguy cơ thâm hụt những món chi sau cùng, nhất là khi có những phát sinh ngoài dự kiến như bệnh tật, thuốc men. Thực hiện các kế hoạch độc lập với nhau sẽ giúp ta đánh giá tình hình tài chính của gia đình rõ ràng hơn. Khi một kế hoạch nào đó được thực hiện nhanh hơn dự định, bạn có thể nâng cao mục tiêu của kế hoạch đó, ví dụ chọn trường đại học tốt hơn, mua nhà lớn hơn…</p>
 <blockquote>
 <p>Nói về việc mua nhà, trong tình hình giá nhà và lãi suất quá cao như hiện nay, trước khi quyết định mua nhà (dù cho bạn có đủ tiền để mua hay bạn cần vay thêm) bạn có thể thử chép bảng tính này thành hai bản, một bản là kế hoạch mua nhà trước, (trả nợ, nếu có) xong rồi mới để dành cho hưu trí, một bản là đem tiền gửi ngân hàng hoặc quỹ đầu tư, lấy lãi đi thuê nhà, tích luỹ cho hưu trí. So sánh hai kế hoạch xem kế hoạch nào mau đạt đến <a href="../chi-tieu">tự do tài chính</a> hơn.</p>
@@ -350,7 +344,6 @@ type="adsense"
 data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
-
 
   <hr>
 Hit count <amp-iframe width="120" height="30" frameborder="0" 
