--- a/huu-ich/ke-hoach-tai-chinh/khtc1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtc1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Lập kế hoạch tài chính (Trang web LHBội)</title>
+<title>Lập kế hoạch tài chính gia đình</title>
 <meta name="description" content="Hướng dẫn lập kế hoạch tài chính gia đình. Công cụ giải quyết nhiều bài toán khó trong tài chính gia đình." />
 <meta name="keywords" content="hữu ích, kế hoạch, tài chính, gia đình, tích luỹ, hưu trí, tuổi già">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/khtc1">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -155,6 +155,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -226,16 +227,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Lập kế hoạch tài chính gia đình</div>
-<div class="right">Viết lần đầu trong Tháng Hai, 2012.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -253,6 +246,8 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Lập kế hoạch tài chính gia đình</h1>
+<div class="right">Viết lần đầu trong Tháng Hai, 2012.</div>
 <p>(Đây là phiên bản cũ. Mời bạn xem <a href="../ke-hoach-tai-chinh/">phiên bản 2.0</a>.)
 <h2>Tại sao cần lập kế hoạch tài chính?</h2>
 <p>Rất nhiều người chưa hề nghĩ đến việc tiết kiệm đều đặn; có bao nhiêu tiền dùng hết bấy nhiêu; thậm chí dùng nhiều hơn số tiền có trong túi nên thường xuyên túng thiếu trước ngày lãnh lương.
