--- a/huu-ich/ke-hoach-tai-chinh/khtcp2.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp2.html
@@ -67,7 +67,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -141,6 +141,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -212,17 +213,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Lập kế hoạch tài chính gia đình</div>
-  <div class="right">(<a href="https://en.lhboi.name.vn/fa/pfr/pfr2">English</a>)</div>
-  <div class="right">Viết lần đầu trong Tháng Hai, 2019.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -240,6 +232,9 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Lập kế hoạch tài chính gia đình</h1>
+  <div class="right">(<a href="https://en.lhboi.name.vn/fa/pfr/pfr2">English</a>)</div>
+  <div class="right">Viết lần đầu trong Tháng Hai, 2019.</div>
   <h2>Giai đoạn về hưu</h2>
   <p>Bạn đ̣ã nghỉ kiếm tiền và đang chi tiêu từ quỹ hưu trí. Bạn không còn những mối lo phải trả góp, phải nuôi con…
   <br>Đây là công cụ tính toán giúp bạn kiểm soát quỹ hưu trí và giữ mức sống ổn định trong suốt những năm còn lại.
