--- a/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap.html
+++ b/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tăng thu nhập (Trang web LHBội)</title>
+<title>Tăng thu nhập</title>
 <meta name="description" content="Những cách tăng thu nhập của gia đình để tăng mức sống, mau tự do tài chính, về hưu sớm" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, thu nhập">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Tăng thu nhập</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+  <h1>Tăng thu nhập</h1>
 <p>Tăng thu nhập là việc <i>thứ ba</i> phải làm để mau đạt đến <a href="../chi-tieu">Tự do tài chính</a>. Việc thứ nhất là <a href="ke-hoach">kiểm soát chi tiêu</a>; việc thứ hai là <a href="bao-ve">bảo vệ nguồn thu nhập</a>, tức là tránh bị mất tiền.
 <br>Có hai loại thu nhập:</p>
 <ul><li>thu nhập chủ động: dùng sức mình làm để được trả công</li>
