--- a/huu-ich/ke-hoach-tai-chinh/thu-chi.html
+++ b/huu-ich/ke-hoach-tai-chinh/thu-chi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Thu Chi (Trang web LHBội)</title>
+<title>Liệt kê Thu Chi</title>
 <meta name="description" content="Biết rõ Thu Chi của gia đình là việc cần thiết để lập kế hoạch tài chính, ổn định cuộc sống" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, thu chi">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/thu-chi">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,9 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
     <!-- body here -->
-<div class="title">Liệt kê Thu Chi</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,10 +231,11 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+<h1>Liệt kê Thu Chi</h1>
 <p>Liệt kê thu và chi của cả gia đình bạn trong trang Thu-chi của <a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">bảng tính</a>.<br />
 Mục đích của việc này là để biết mức chi tiêu hiện nay và dự báo số tiền phải chi hàng tháng trong tương lai để có cùng mức sống như hiện nay. Nếu bạn chưa biết rõ hiện nay bạn đã tiêu bao nhiêu tiền cho những việc gì thì bạn có thể bỏ qua bước này và tính kết quả gần đúng ở bước <a href="huu-tri">thứ hai</a>.<br />
 Nếu biết rõ tiền của chúng ta chạy vào những chỗ nào, khi cần giảm chi tiêu, chúng ta có thể nhanh chóng quyết định giảm chi những mục nào. Khi nào thì cần giảm chi tiêu? Khi thu nhập bị giảm, khi cần tăng tích luỹ cho một kế hoạch chi nào đó trong tương lai.</p>
-<h3>Chi</h3>
+<h2>Chi</h2>
 <p>Đầu tiên liệt kê các khoản chi từ 1.1 tới 1.6, ghi khoản chi hàng tháng vào cột F, chương trình sẽ tính ra khoản chi hàng năm tương ứng. Nếu khoản chi đó không thường xuyên mỗi tháng thì ghi thẳng vào cột G mức chi hàng năm. Sáu khoản đó là những khoản
 <a href="../chi-tieu">chi theo kế hoạch khoa học</a>.</p>
 <p>Nếu bạn đang trả nợ góp thì cũng ghi số tiền phải trả hàng tháng vào các mục thích hợp từ 1.1 tới 1.5.</p>
@@ -272,7 +267,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Thu</h3>
+<h2>Thu</h2>
 <p>Kế tiếp liệt kê các khoản thu nhập. Nếu bạn đi làm để lãnh lương hàng tháng hay
 hàng tuần thì ghi lương quy về tháng vào ô F34. Nếu bạn buôn bán thì tiền lời cũng có thể xem như lương của
 bạn, ghi tiền lời hàng tháng vào ô F34 hoặc ghi tiền lời hàng năm vào ô G34.</p>
