--- a/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>TK M cố định (Trang web LHBội)</title>
+<title>TK M cố định</title>
 <meta name="description" content="Tính thời gian cần thiết để tích luỹ một số tiền lớn khi góp một món tiền cố định mỗi tháng" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiết kiệm">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">TK M cố định</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/
     </amp-facebook-like>
   </div>
 
+    <h1>TK M cố định</h1>
 <p>Dùng trang tính <b><a href="https://docs.google.com/spreadsheets/d/1OFfRiYoJBvQlLakS4QA1RxfMsYtvn7c7FGKFmJK-at0/edit?usp=sharing" target="_blank">TK-M-cố định</a></b>
 khi bạn cần biết phải để dành bao lâu để có đủ số
 tiền cần thiết cho việc mua TV, xe, nhà hay thứ gì khác.
