--- a/huu-ich/tien-thuong-cuoi-nam.html
+++ b/huu-ich/tien-thuong-cuoi-nam.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tiền thưởng cuối năm (Trang web LHBội)</title>
+<title>Tiền thưởng cuối năm</title>
 <meta name="description" content="Cuối năm doanh nghiệp thưởng như thế nào và nhân viên dùng tiền thưởng thế nào thì có lợi" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiền thưởng, tết">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">
