--- a/huu-ich/vao-dai-hoc.html
+++ b/huu-ich/vao-dai-hoc.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Chuẩn bị vào đại học (Trang web LHBội)</title>
+<title>Chuẩn bị vào đại học và vào đời</title>
 <meta name="description" content="Học sinh chuẩn bị vào đại học và vào đời: quản lý tài chính cá nhân, tự chăm sóc, tự bảo vệ, tạo các mối quan hệ." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/vao-dai-hoc">
