--- a/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
+++ b/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ước mơ thành tỉ phú (Trang web LHBội)</title>
+<title>Ước mơ thành tỉ phú</title>
 <meta name="description" content="Hãy thực hiện ước mơ thành tỉ phú. Mọi người đều có thể trở thành tỉ phú một cách dễ dàng và chắc chắn." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tỉ phú">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Ước mơ thành tỉ phú</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu
     </amp-facebook-like>
   </div>
 
+  <h1>Ước mơ thành tỉ phú</h1>
   <p><b>Làm thế nào để trở thành tỉ phú một cách chắc chắn và nhẹ nhàng?</b></p>
   <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
   <p>Bạn 25 tuổi, mới vào đời với hai bàn tay trắng, lương đủ sống. Bạn ước mơ có một tỉ đồng. Làm thế nào để có?
