--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Sổ tiết kiệm hay Quỹ đầu tư? (Trang web LHBội)</title>
+<title>Sổ tiết kiệm hay Quỹ đầu tư?</title>
 <meta name="description" content="So sánh tiền lời giữa sổ tiết kiệm và quỹ đầu tư trong 12 năm qua" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiết kiệm, đầu tư, lợi nhuận">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">
